{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 23,
  "lineage": "d7c8ceca-ffb1-6883-9ba2-17577b89e751",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "hub_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/networkSecurityGroups/AZB50-HUB-RG_NSG1",
            "location": "eastus",
            "name": "AZB50-HUB-RG_NSG1",
            "resource_group_name": "AZB50-HUB-RG",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/networkSecurityGroups/AZB50-HUB-RG_NSG1/securityRules/Allow-ICMP",
            "name": "Allow-ICMP",
            "network_security_group_name": "AZB50-HUB-RG_NSG1",
            "priority": 101,
            "protocol": "Icmp",
            "resource_group_name": "AZB50-HUB-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.hub_nsg",
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/networkSecurityGroups/AZB50-HUB-RG_NSG1/securityRules/Allow-All-TCP",
            "name": "Allow-All-TCP",
            "network_security_group_name": "AZB50-HUB-RG_NSG1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "AZB50-HUB-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.hub_nsg",
            "azurerm_resource_group.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.20.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AZB50-HUB-RG",
            "virtual_network_name": "AZB50-HUB-RG-vNET1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AZB50-HUB-RG",
            "virtual_network_name": "AZB50-HUB-RG-vNET1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.30.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AZB50-HUB-RG",
            "virtual_network_name": "AZB50-HUB-RG-vNET1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/JumpServersSubnet",
            "name": "JumpServersSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AZB50-HUB-RG",
            "virtual_network_name": "AZB50-HUB-RG-vNET1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.40.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/PvtEndpointSubnet",
            "name": "PvtEndpointSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AZB50-HUB-RG",
            "virtual_network_name": "AZB50-HUB-RG-vNET1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.hub",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.50.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "267a748a-8184-4aaa-b44b-b73a5e782480",
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1",
            "location": "eastus",
            "name": "AZB50-HUB-RG-vNET1",
            "resource_group_name": "AZB50-HUB-RG",
            "subnet": [
              {
                "address_prefixes": [
                  "10.50.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/JumpServersSubnet",
                "name": "JumpServersSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.50.10.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.50.20.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.50.30.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/GatewaySubnet",
                "name": "GatewaySubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.50.40.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-HUB-RG/providers/Microsoft.Network/virtualNetworks/AZB50-HUB-RG-vNET1/subnets/PvtEndpointSubnet",
                "name": "PvtEndpointSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.hub"
          ]
        }
      ]
    }
  ]
}